# cc_ios

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  FEATURE_INVESTIGATION_REPORT.md  GIT_INTEGRATION_STATUS.md  MACHINE_CARD_STATE_MAPPING.md  MACHINE_SELECTION_DEBUGGING.md  MIGRATION.md  Makefile  README.md  SIMPLIFICATION_OPPORTUNITIES.md  XcodeBuildMCP.md  plan.md  project.yml  test-integration.sh  test_tmux.py
.github/workflows/: docker.yml
ClaudeMachineLauncher/: App.swift  MainTabView.swift
ClaudeMachineLauncher.xcodeproj/: project.pbxproj
ClaudeMachineLauncher.xcodeproj/xcshareddata/xcschemes/: ClaudeMachineLauncher.xcscheme
ClaudeMachineLauncher/Core/: AgentStreamingService.swift  AppStateManager.swift  FlyAPIClient.swift  KeychainManager.swift  Logger.swift  MachineStateManager.swift  SessionManager.swift
ClaudeMachineLauncher/Core/Models/: FlyApp.swift  FlyLaunchConfig.swift  FlyMachine.swift  FlyUser.swift  GitRepository.swift
ClaudeMachineLauncher/Features/Agents/: AgentsView.swift  FlyLaunchService.swift  FlyLaunchViewModel.swift  MachineCardView.swift
ClaudeMachineLauncher/Features/FlyLaunch/: FlyLaunchService.swift  FlyLaunchView.swift  FlyLaunchViewModel.swift
ClaudeMachineLauncher/Features/Settings/: RepositoryManagementView.swift  SettingsView.swift  (+1 more)
ClaudeMachineLauncherTests/: AgentStreamingServiceTests.swift  FlyLaunchConfigTests.swift  FlyLaunchViewModelTests.swift  KeychainManagerTests.swift  TerminalViewModelTests.swift
server/: Dockerfile  README.md  machine-config.json  pyproject.toml  serve_agent.py  startup.sh  test_server.py
(+3 files in other folders)
