[project]
name = "claude-agent-server"
version = "1.0.0"
description = "FastAPI server for Claude agent WebSocket streaming"
authors = [
    {name = "Claude Code", email = "noreply@anthropic.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["serve_agent"]

[tool.uvicorn]
host = "0.0.0.0"
port = 8080
reload = true